fix the unalignment caused due to long course name

--- a/media/css/kodelearn.css
+++ b/media/css/kodelearn.css
@@ -220,6 +220,7 @@ a{ color: #427693; }
 	font-size: 30px; 
 	font-family: Georgia, serif; 
 	color: #4c3d34; 
+	width: 360px;
 }
 .pageDesc {
 	width: 295px; 
